<resources>
    <string name="app_name">split_the_bill</string>
    <string name="tv_goukei_label">合計金額</string>
    <string name="tv_ninnzuu_label">人数</string>
    <string name="tv_kekka_disp">一人いくらか、割り勘計算！</string>
    <string name="b_keisann">計算ボタン</string>
    <string name="et_goukei_error">合計金額を入力してください</string>
    <string name="et_ninnzuu_error">人数を入力してください</string>
    <string name="set_kekka">%1$,3d円です</string>
    <string name="split_the_bill">split the bill</string>
    <string name="tv_tyousei">調整金額</string>
    <string name="tv_kekka1_disp">計算結果 1人分の価格</string>
    <string name="tv_kekka2_disp">計算結果 2人分の価格</string>
    <string name="b_restart">もう一回計算</string>
    <string name="set_kekka1">%1$,3d円です</string>
    <string name="set_hasuu_ari"></string>
    <string name="set_hasuu_nasi"></string>
</resources>
