<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="49dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="275dp"
        android:layout_height="28dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/split_the_bill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/split_the_bill" />

    <EditText
        android:id="@+id/et_goukei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:inputType="number"
        android:textAppearance="@android:style/TextAppearance.Material"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_kekka1_disp" />

    <EditText
        android:id="@+id/et_ninnzuu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:textAppearance="@android:style/TextAppearance.Material"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_goukei" />

    <Button
        android:id="@+id/b_keisann"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/b_keisann"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_kekka1_disp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_kekka_disp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_goukei_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="80dp"
        android:fontFamily="sans-serif"
        android:text="@string/tv_goukei_label"
        android:textAppearance="@android:style/TextAppearance.Material"
        app:layout_constraintBottom_toTopOf="@+id/et_goukei"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_ninnzuu_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="80dp"
        android:text="@string/tv_ninnzuu_label"
        android:textAppearance="@android:style/TextAppearance.Material"
        app:layout_constraintBottom_toTopOf="@+id/et_ninnzuu"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_tyousei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/tv_tyousei"
        android:textAppearance="@android:style/TextAppearance.Material"
        app:layout_constraintBottom_toTopOf="@+id/et_tyousei"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_tyousei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:textAppearance="@android:style/TextAppearance.Material"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ninnzuu" />

</android.support.constraint.ConstraintLayout>